tests/snapshots/parser_snapshots__simple__double_quoted_string.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo \\\"hello world\\\"\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    DoubleQuoted(
                        [
                            Literal(
                                "hello world",
                            ),
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
