tests/snapshots/parser_snapshots__simple__empty_input.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [],
        redirections: [],
    },
)
