tests/snapshots/parser_snapshots__simple__redirect_output.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo hello > out.txt\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "hello",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Output,
                target: File(
                    Word {
                        parts: [
                            Literal(
                                "out.txt",
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
