tests/snapshots/parser_snapshots__simple__whitespace_only.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"   \\t  \")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [],
        redirections: [],
    },
)
